--- a/PWA App (H3)/Pages/Picture.razor
+++ b/PWA App (H3)/Pages/Picture.razor
@@ -73,7 +73,7 @@
 @code {
     bool dialogIsOpen = false;
 
-    // Function to set the bool for the dialog, to control if its open or not
+    // Method to set the bool for the dialog, to control if its open or not
     void OpenDialog()
     {
         dialogIsOpen = true;
@@ -102,7 +102,7 @@
         StateHasChanged();
     }
 
-    // Function for saving the pictures data to a list.
+    // Method for saving the pictures data to a list.
     private async void SaveToList()
     {
         dialogIsOpen = false;
